--- a/src/assets/theming/_base.scss
+++ b/src/assets/theming/_base.scss
@@ -90,11 +90,6 @@ main {
       width: fit-content;
     }
   }
-
-  nav ul {
-    // display: flex;
-    // justify-content: flex-end;
-  }
 }
 
 header,
@@ -116,8 +111,12 @@ header {
 }
 
 footer {
-  border-top: 1px solid $cat-clr;
   padding: .5em 1em 1.2em;
+}
+
+footer .content {
+  border-top: 1px solid $cat-clr;
+  padding: .5em 0;
 }
 
 header .content {
